--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
 
     <style>
-        .font-sans{
+        .font-sans {
             font-family: 'Work Sans', sans-serif;
         }
     </style>
@@ -28,20 +29,199 @@
 <body>
     <!-- banner section -->
     <header>
-        <div class="flex  flex-col md:flex-row lg:flex-row justify-evenly items-center bg-[#F9F6E2] gap-4">
+        <div class="flex  flex-col md:flex-row lg:flex-row justify-evenly items-center bg-[#F9F6E2] gap-4 py-2">
             <div class="space-y-10 text-center w-1/4">
                 <h4 class="text-3xl font-medium">---SALE FEVER---</h4>
-                <h1 class="text-5xl font-bold">Purchase TK 200 or above & get <span class="text-[#E527B2]">20% off</span></h1>
+                <h1 class="text-5xl font-bold">Purchase TK 200 or above & get <span class="text-[#E527B2]">20%
+                        off</span></h1>
                 <div class="flex justify-center items-center gap-4">
                     <h5 class="text-2xl font-medium">Use Promo Code</h5>
                     <button class="text-xl font-medium btn btn-secondary text-white">SELL200</button>
                 </div>
             </div>
-            <div class="">
+            <div>
                 <img src="/images/Summer 1.png" alt="">
             </div>
         </div>
     </header>
+
+    <!-- main section -->
+
+    <main>
+        <section>
+            <div class=" bg-[#F8F8F8] p-16">
+
+                <h1 class="text-4xl font-semibold mb-5">Kitchenware</h1>
+
+                <div class="flex flex-col lg:flex-row">
+
+                    <!-- kitchenware section -->
+
+                    <div class="flex-1 grid grid-cols-1 md:grid-cols-2    lg:grid-cols-3 gap-3">
+
+                        <!-- card-1 -->
+
+                        <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                            <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
+                                <img src="/images/prod1.png" alt="Shoes" class="w-auto" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                                <div class="rating">
+                                    <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400"
+                                        checked />
+                                    <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                                </div>
+                                <h2 class="card-title text-lg font-semibold">K. Accessories1</h2>
+                                <p class="text-lg font-normal text-[#a37373]">39.00 TK</p>
+                            </div>
+                        </div>
+
+                        <!-- card-2 -->
+
+                        <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                            <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
+                                <img src="/images/prod2.png" alt="Shoes" class="w-auto" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                                <div class="rating">
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                </div>
+                                <h2 class="card-title text-lg font-semibold">K. Accessories2</h2>
+                                <p class="text-lg font-normal text-[#a37373]">25.00 TK</p>
+                            </div>
+                        </div>
+
+                        <!-- card-3 -->
+
+                        <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                            <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
+                                <img src="/images/prod3.png" alt="Shoes" class="w-auto" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                                <div class="rating">
+                                    <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400"
+                                        checked />
+                                    <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                                </div>
+                                <h2 class="card-title text-lg font-semibold">Home Cooker</h2>
+                                <p class="text-lg font-normal text-[#a37373]">49.00 TK</p>
+                            </div>
+                        </div>
+
+                        <!-- sportswear section -->
+
+                        <div class="col-span-3">
+
+                            <h1 class="text-4xl font-semibold my-8">Sportswear</h1>
+
+                            <div class="flex grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-3">
+
+                                <!-- card-4 -->
+
+                                <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                                    <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
+                                        <img src="/images/prod4.png" alt="Shoes" class="w-auto" />
+                                    </figure>
+                                    <div class="card-body items-center text-center">
+                                        <div class="rating">
+                                            <input type="radio" name="rating-4"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400"
+                                                checked />
+                                            <input type="radio" name="rating-4"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                            <input type="radio" name="rating-4"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                            <input type="radio" name="rating-4"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                        </div>
+                                        <h2 class="card-title text-lg font-semibold">Sports Back Cap</h2>
+                                        <p class="text-lg font-normal text-[#a37373]">49.00 TK</p>
+                                    </div>
+                                </div>
+
+                                <!-- card-5 -->
+
+                                <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                                    <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
+                                        <img src="/images/prod5.png" alt="Shoes" class="w-auto" />
+                                    </figure>
+                                    <div class="card-body items-center text-center">
+                                        <div class="rating">
+                                            <input type="radio" name="rating-5"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                            <input type="radio" name="rating-5"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                            <input type="radio" name="rating-5"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                            <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400"
+                                                checked />
+                                            <input type="radio" name="rating-5"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                        </div>
+                                        <h2 class="card-title text-lg font-semibold">Full Jersey Set</h2>
+                                        <p class="text-lg font-normal text-[#a37373]">69.00 TK</p>
+                                    </div>
+                                </div>
+
+                                <!-- card-6 -->
+
+                                <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                                    <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
+                                        <img src="/images/prod6.png" alt="Shoes" class="w-auto" />
+                                    </figure>
+                                    <div class="card-body items-center text-center">
+                                        <div class="rating">
+                                            <input type="radio" name="rating-6"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                            <input type="radio" name="rating-6"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                            <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400"
+                                                checked />
+                                            <input type="radio" name="rating-6"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                            <input type="radio" name="rating-6"
+                                                class="mask mask-star-2 bg-orange-400" />
+                                        </div>
+                                        <h2 class="card-title text-lg font-semibold">Sports cates</h2>
+                                        <p class="text-lg font-normal text-[#a37373]">159.00 TK</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- cart option -->
+
+                    <div class="w-72">
+                        <div class="h-36 bg-white p-5 rounded">
+                            <h1 class="text-2xl font-medium pb-4">Have coupon?</h1>
+                            <div class="form-control">
+                                <div class="input-group">
+                                    <input type="text" placeholder="Coupon code" class="input input-bordered w-9/12" />
+                                    <button class="text-xl font-medium btn btn-secondary text-white">Apply</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
