--- a/index.html
+++ b/index.html
@@ -210,12 +210,18 @@
                             <div class="form-control">
                                 <div class="input-group">
                                     <input type="text" placeholder="Coupon code" class="input input-bordered w-9/12" />
-                                    <button class="text-xl font-medium btn btn-secondary text-white">Apply</button>
+                                    <button disabled class="text-xl font-medium btn btn-secondary text-white">Apply</button>
                                 </div>
                             </div>
                         </div>
-                        <div>
-
+                        <div class="mt-5 bg-white p-4 space-y-3 rounded h-60">
+                            <ol></ol>
+                            <hr>
+                            <p class="text-2xl"><span class="font-medium">Total price:</span> 00 TK</p>
+                            <p class="text-2xl"><span class="font-medium">Discount:</span> 00 TK</p>
+                            <p class="text-2xl"><span class="font-medium">Total:</span> 00 TK</p>
+                            <hr>
+                            <button disabled class="text-xl font-medium btn w-full btn-secondary text-white">Make Purchase</button>
                         </div>
                     </div>
                 </div>
