--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div>
-                <img src="/images/Summer 1.png" alt="">
+                <img src="./images/Summer 1.png" alt="">
             </div>
         </div>
     </header>
@@ -61,9 +61,9 @@
 
                         <!-- card-1 -->
 
-                        <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                        <div onclick="getProductDetail(this)" class="card w-96 bg-base-100 shadow-xl px-6 py-9 hover: cursor-pointer">
                             <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
-                                <img src="/images/prod1.png" alt="Shoes" class="w-auto" />
+                                <img src="./images/prod1.png" alt="Shoes" class="w-auto" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <div class="rating">
@@ -75,15 +75,15 @@
                                     <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="card-title text-lg font-semibold">K. Accessories1</h2>
-                                <p class="text-lg font-normal text-[#a37373]">39.00 TK</p>
+                                <p class="text-lg font-normal text-[#a37373]"><span>39.00</span> TK</p>
                             </div>
                         </div>
 
                         <!-- card-2 -->
 
-                        <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                        <div onclick="getProductDetail(this)" class="card w-96 bg-base-100 shadow-xl px-6 py-9 hover: cursor-pointer">
                             <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
-                                <img src="/images/prod2.png" alt="Shoes" class="w-auto" />
+                                <img src="./images/prod2.png" alt="Shoes" class="w-auto" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <div class="rating">
@@ -95,15 +95,15 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="card-title text-lg font-semibold">K. Accessories2</h2>
-                                <p class="text-lg font-normal text-[#a37373]">25.00 TK</p>
+                                <p class="text-lg font-normal text-[#a37373]"><span>25.00</span> TK</p>
                             </div>
                         </div>
 
                         <!-- card-3 -->
 
-                        <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                        <div onclick="getProductDetail(this)" class="card w-96 bg-base-100 shadow-xl px-6 py-9 hover: cursor-pointer">
                             <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
-                                <img src="/images/prod3.png" alt="Shoes" class="w-auto" />
+                                <img src="./images/prod3.png" alt="Shoes" class="w-auto" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <div class="rating">
@@ -115,7 +115,7 @@
                                     <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="card-title text-lg font-semibold">Home Cooker</h2>
-                                <p class="text-lg font-normal text-[#a37373]">49.00 TK</p>
+                                <p class="text-lg font-normal text-[#a37373]"><span>49.00</span> TK</p>
                             </div>
                         </div>
 
@@ -129,9 +129,9 @@
 
                                 <!-- card-4 -->
 
-                                <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                                <div onclick="getProductDetail(this)" class="card w-96 bg-base-100 shadow-xl px-6 py-9 hover: cursor-pointer">
                                     <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
-                                        <img src="/images/prod4.png" alt="Shoes" class="w-auto" />
+                                        <img src="./images/prod4.png" alt="Shoes" class="w-auto" />
                                     </figure>
                                     <div class="card-body items-center text-center">
                                         <div class="rating">
@@ -147,15 +147,15 @@
                                                 class="mask mask-star-2 bg-orange-400" />
                                         </div>
                                         <h2 class="card-title text-lg font-semibold">Sports Back Cap</h2>
-                                        <p class="text-lg font-normal text-[#a37373]">49.00 TK</p>
+                                        <p class="text-lg font-normal text-[#a37373]"><span>49.00</span> TK</p>
                                     </div>
                                 </div>
 
                                 <!-- card-5 -->
 
-                                <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                                <div onclick="getProductDetail(this)" class="card w-96 bg-base-100 shadow-xl px-6 py-9 hover: cursor-pointer">
                                     <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
-                                        <img src="/images/prod5.png" alt="Shoes" class="w-auto" />
+                                        <img src="./images/prod5.png" alt="Shoes" class="w-auto" />
                                     </figure>
                                     <div class="card-body items-center text-center">
                                         <div class="rating">
@@ -171,15 +171,15 @@
                                                 class="mask mask-star-2 bg-orange-400" />
                                         </div>
                                         <h2 class="card-title text-lg font-semibold">Full Jersey Set</h2>
-                                        <p class="text-lg font-normal text-[#a37373]">69.00 TK</p>
+                                        <p class="text-lg font-normal text-[#a37373]"><span>69.00</span> TK</p>
                                     </div>
                                 </div>
 
                                 <!-- card-6 -->
 
-                                <div class="card w-96 bg-base-100 shadow-xl px-6 py-9">
+                                <div onclick="getProductDetail(this)" class="card w-96 bg-base-100 shadow-xl px-6 py-9 hover: cursor-pointer">
                                     <figure class="px-10 pt-10 bg-[#F8F8F8] rounded-lg">
-                                        <img src="/images/prod6.png" alt="Shoes" class="w-auto" />
+                                        <img src="./images/prod6.png" alt="Shoes" class="w-auto" />
                                     </figure>
                                     <div class="card-body items-center text-center">
                                         <div class="rating">
@@ -195,7 +195,7 @@
                                                 class="mask mask-star-2 bg-orange-400" />
                                         </div>
                                         <h2 class="card-title text-lg font-semibold">Sports cates</h2>
-                                        <p class="text-lg font-normal text-[#a37373]">159.00 TK</p>
+                                        <p class="text-lg font-normal text-[#a37373]"><span>159.00</span> TK</p>
                                     </div>
                                 </div>
                             </div>
@@ -209,25 +209,26 @@
                             <h1 class="text-2xl font-medium pb-4">Have coupon?</h1>
                             <div class="form-control">
                                 <div class="input-group">
-                                    <input type="text" placeholder="Coupon code" class="input input-bordered w-9/12" />
-                                    <button disabled class="text-xl font-medium btn btn-secondary text-white">Apply</button>
+                                    <input id="input-field" type="text" placeholder="Coupon code" class="input input-bordered w-9/12" />
+                                    <button id="btn-apply" disabled class="text-xl font-medium btn btn-secondary text-white">Apply</button>
                                 </div>
                             </div>
                         </div>
                         <div class="mt-5 bg-white p-4 space-y-3 rounded h-60">
-                            <ol></ol>
+                            <ol id="input-product-name" class="list-decimal font-medium pl-4"></ol>
                             <hr>
-                            <p class="text-2xl"><span class="font-medium">Total price:</span> 00 TK</p>
-                            <p class="text-2xl"><span class="font-medium">Discount:</span> 00 TK</p>
-                            <p class="text-2xl"><span class="font-medium">Total:</span> 00 TK</p>
+                            <p class="text-2xl"><span class="font-medium">Total price:</span> <span id="total-price-field">00</span> TK</p>
+                            <p class="text-2xl"><span class="font-medium">Discount:</span> <span id="discount-field">00</span> TK</p>
+                            <p class="text-2xl"><span class="font-medium">Total:</span> <span id="total-field">00</span> TK</p>
                             <hr>
-                            <button disabled class="text-xl font-medium btn w-full btn-secondary text-white">Make Purchase</button>
+                            <button id="btn-purchase" disabled class="text-xl font-medium btn w-full btn-secondary text-white">Make Purchase</button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <script src="js/total.js"></script>
 </body>
 
 </html>
